@startuml Smart Voucher System - ERD (API-focused)

!define TABLE(x) entity x << (T,#FFAAAA) >>
!define PK(x) <b><color:#b8860b><&key></color> x</b>
!define FK(x) <color:#aaaaaa><&link-intact></color> x
!define COLUMN(x) <&media-record> x

skinparam entity {
  BackgroundColor #f9f9f9
  BorderColor #333333
  ArrowColor #666666
}

skinparam linetype ortho

title Smart Voucher System - ERD (17 bang - API-focused)\nTich hop he thong ngoai qua external ID

' ========================================
' 1. USERS
' ========================================

TABLE(users) {
  PK(id) : BIGSERIAL
  --
  COLUMN(username) : VARCHAR(50) NOT NULL UNIQUE
  COLUMN(password_hash) : VARCHAR(255) NOT NULL
  COLUMN(full_name) : VARCHAR(100) NOT NULL
  COLUMN(email) : VARCHAR(100) UNIQUE
  COLUMN(phone) : VARCHAR(20)
  COLUMN(role) : VARCHAR(50) NOT NULL
  COLUMN(is_active) : BOOLEAN DEFAULT TRUE
  COLUMN(status) : VARCHAR(20) DEFAULT 'ACTIVE'
  COLUMN(email_verified) : BOOLEAN DEFAULT FALSE
  COLUMN(created_at) : TIMESTAMPTZ
  COLUMN(updated_at) : TIMESTAMPTZ
}
note right of users
  role: 'ADMIN' | 'STAFF' | 'USER'
  (USER = Merchant)
  status: 'ACTIVE' | 'PENDING'
  | 'REJECTED'
end note

' ========================================
' 2. PERMISSIONS
' ========================================

TABLE(permissions) {
  PK(id) : BIGSERIAL
  --
  COLUMN(name) : VARCHAR(100) NOT NULL UNIQUE
  COLUMN(description) : VARCHAR(255)
  COLUMN(created_at) : TIMESTAMPTZ
}
note right of permissions
  VD: 'VOUCHER_READ'
  'CAMPAIGN_CREATE'
  'USER_MANAGE' ...
end note

' ========================================
' 3. ROLE_PERMISSIONS
' ========================================

TABLE(role_permissions) {
  PK(role) : VARCHAR(50) NOT NULL
  FK(permission_id) : BIGINT NOT NULL
}
note right of role_permissions
  PK: (role, permission_id)
  role: 'ADMIN' | 'STAFF' | 'USER'
end note

' ========================================
' 4. EMAIL_VERIFICATION_OTPS
' ========================================

TABLE(email_verification_otps) {
  PK(id) : BIGSERIAL
  --
  FK(user_id) : BIGINT NOT NULL
  COLUMN(otp_hash) : VARCHAR(255) NOT NULL
  COLUMN(expires_at) : TIMESTAMPTZ NOT NULL
  COLUMN(attempts) : INT DEFAULT 0
  COLUMN(used) : BOOLEAN DEFAULT FALSE
  COLUMN(created_at) : TIMESTAMPTZ
}
note right of email_verification_otps
  OTP hash bang BCrypt
  Het han sau 15 phut
  Su dung 1 lan (used=true)
end note

' ========================================
' 5. PASSWORD_RESET_OTPS
' ========================================

TABLE(password_reset_otps) {
  PK(id) : BIGSERIAL
  --
  FK(user_id) : BIGINT NOT NULL
  COLUMN(otp_hash) : VARCHAR(255) NOT NULL
  COLUMN(reset_token) : VARCHAR(255) UNIQUE
  COLUMN(otp_expires_at) : TIMESTAMPTZ NOT NULL
  COLUMN(reset_token_expires_at) : TIMESTAMPTZ
  COLUMN(attempts) : INT DEFAULT 0
  COLUMN(used) : BOOLEAN DEFAULT FALSE
  COLUMN(created_at) : TIMESTAMPTZ
}
note right of password_reset_otps
  Buoc 1: OTP (15 phut) -> verify
  Buoc 2: reset_token (JWT ngan han)
  -> dung de doi mat khau
end note

' ========================================
' 6. CUSTOMERS
' ========================================

TABLE(customers) {
  PK(id) : BIGSERIAL
  --
  COLUMN(external_id) : VARCHAR(100) UNIQUE
  FK(created_by) : BIGINT
  COLUMN(full_name) : VARCHAR(100) NOT NULL
  COLUMN(email) : VARCHAR(100) UNIQUE
  COLUMN(phone) : VARCHAR(20) UNIQUE
  COLUMN(is_active) : BOOLEAN DEFAULT TRUE
  COLUMN(created_at) : TIMESTAMPTZ
  COLUMN(updated_at) : TIMESTAMPTZ
}
note right of customers
  external_id: ID tu he thong ngoai
  VD: "CUS-001"
  created_by: merchant so huu KH nay
  (data isolation)
end note

' ========================================
' 7. CAMPAIGNS
' ========================================

TABLE(campaigns) {
  PK(id) : BIGSERIAL
  --
  COLUMN(name) : VARCHAR(200) NOT NULL
  COLUMN(description) : TEXT
  COLUMN(budget) : DECIMAL(15,2)
  COLUMN(start_date) : TIMESTAMPTZ NOT NULL
  COLUMN(end_date) : TIMESTAMPTZ NOT NULL
  COLUMN(status) : VARCHAR(50) NOT NULL
  FK(created_by) : BIGINT NOT NULL
  COLUMN(created_at) : TIMESTAMPTZ
  COLUMN(updated_at) : TIMESTAMPTZ
}
note right of campaigns
  status: 'DRAFT' | 'ACTIVE'
  | 'PAUSED' | 'ENDED'
  --
  budget: ngan sach du kien
  de so sanh voi thuc chi
end note

' ========================================
' 8. VOUCHERS (CORE)
' ========================================

TABLE(vouchers) {
  PK(id) : BIGSERIAL
  --
  COLUMN(code) : VARCHAR(50) NOT NULL UNIQUE
  FK(campaign_id) : BIGINT
  COLUMN(description) : TEXT
  ..Giam gia..
  COLUMN(discount_type) : VARCHAR(50) NOT NULL
  COLUMN(discount_value) : DECIMAL(15,2) NOT NULL
  COLUMN(max_discount_amount) : DECIMAL(15,2)
  ..Dieu kien..
  COLUMN(min_order_value) : DECIMAL(15,2) DEFAULT 0
  COLUMN(applicable_products) : JSONB DEFAULT '[]'
  COLUMN(applicable_categories) : JSONB DEFAULT '[]'
  COLUMN(applicable_branches) : JSONB DEFAULT '[]'
  ..Gioi han..
  COLUMN(max_usage_total) : INT
  COLUMN(max_usage_per_customer) : INT
  COLUMN(current_usage_count) : INT DEFAULT 0
  ..Pham vi & thoi gian..
  COLUMN(is_public) : BOOLEAN DEFAULT TRUE
  COLUMN(valid_from) : TIMESTAMPTZ NOT NULL
  COLUMN(valid_until) : TIMESTAMPTZ NOT NULL
  COLUMN(code_type) : VARCHAR(10) NOT NULL DEFAULT 'SHARED'
  COLUMN(status) : VARCHAR(50) NOT NULL
  FK(created_by) : BIGINT NOT NULL
  COLUMN(created_at) : TIMESTAMPTZ
  COLUMN(updated_at) : TIMESTAMPTZ
}
note right of vouchers
  discount_type: 'PERCENTAGE' | 'FIXED_AMOUNT'
  code_type: 'SHARED' | 'UNIQUE'
  SHARED: 1 code dung chung
  UNIQUE: moi KH 1 code rieng (voucher_codes)
  --
  status: 'ACTIVE' | 'PAUSED' | 'INACTIVE'
  | 'EXPIRED' | 'FULLY_USED' | 'SCHEDULED'
  --
  applicable_*: JSONB mang ID tu he thong ngoai
  [] = ap dung tat ca
  VD: ["SP001","SP002"]
  --
  is_public = TRUE: public
  is_public = FALSE: chi KH duoc gan
end note

' ========================================
' 9. VOUCHER_CODES
' ========================================

TABLE(voucher_codes) {
  PK(id) : BIGSERIAL
  --
  FK(voucher_id) : BIGINT NOT NULL
  COLUMN(code) : VARCHAR(50) NOT NULL UNIQUE
  FK(customer_id) : BIGINT
  COLUMN(used) : BOOLEAN DEFAULT FALSE
  COLUMN(used_at) : TIMESTAMPTZ
  COLUMN(created_at) : TIMESTAMPTZ
}
note right of voucher_codes
  Chi dung khi voucher.code_type = 'UNIQUE'
  code = "{voucher.code}_{randomId}"
  customer_id: KH duoc assign ma nay
  used: da su dung hay chua
end note

' ========================================
' 10. VOUCHER_CUSTOMERS
' ========================================

TABLE(voucher_customers) {
  PK(id) : BIGSERIAL
  --
  FK(voucher_id) : BIGINT NOT NULL
  FK(customer_id) : BIGINT NOT NULL
  COLUMN(created_at) : TIMESTAMPTZ
}
note right of voucher_customers
  UNIQUE(voucher_id, customer_id)
  Danh sach KH duoc phep dung
  voucher is_public = FALSE
end note

' ========================================
' 11. VOUCHER_DISTRIBUTIONS
' ========================================

TABLE(voucher_distributions) {
  PK(id) : BIGSERIAL
  --
  FK(voucher_id) : BIGINT NOT NULL
  FK(customer_id) : BIGINT NOT NULL
  COLUMN(channel) : VARCHAR(50) NOT NULL
  COLUMN(status) : VARCHAR(50) NOT NULL
  COLUMN(sent_at) : TIMESTAMPTZ
  COLUMN(error_message) : TEXT
  COLUMN(failure_reason) : VARCHAR(500)
  COLUMN(created_at) : TIMESTAMPTZ
}
note right of voucher_distributions
  channel: 'EMAIL' | 'SMS'
  status: 'PENDING' | 'SENT'
  | 'FAILED' | 'CANCELLED'
  --
  error_message: loi ky thuat (stack trace)
  failure_reason: ly do nghiep vu
end note

' ========================================
' 12. VOUCHER_USAGES
' ========================================

TABLE(voucher_usages) {
  PK(id) : BIGSERIAL
  --
  FK(voucher_id) : BIGINT NOT NULL
  FK(customer_id) : BIGINT NOT NULL
  COLUMN(external_order_id) : VARCHAR(100) NOT NULL
  COLUMN(external_branch_id) : VARCHAR(100)
  COLUMN(discount_amount) : DECIMAL(15,2) NOT NULL
  COLUMN(order_total) : DECIMAL(15,2) NOT NULL
  COLUMN(used_at) : TIMESTAMPTZ NOT NULL
}
note right of voucher_usages
  external_order_id: ma don hang
  tu he thong ngoai (POS, web)
  external_branch_id: ma chi nhanh
  tu he thong ngoai
  --
  UNIQUE(voucher_id, external_order_id)
  => 1 don chi dung 1 voucher 1 lan
end note

' ========================================
' 13. API_KEYS
' ========================================

TABLE(api_keys) {
  PK(id) : BIGSERIAL
  --
  COLUMN(name) : VARCHAR(100) NOT NULL
  COLUMN(key_hash) : VARCHAR(255) NOT NULL UNIQUE
  COLUMN(system_name) : VARCHAR(100) NOT NULL
  COLUMN(is_active) : BOOLEAN DEFAULT TRUE
  FK(created_by) : BIGINT NOT NULL
  COLUMN(rate_limit_per_minute) : INT
  COLUMN(rate_limit_per_day) : INT
  COLUMN(expires_at) : TIMESTAMPTZ
  COLUMN(created_at) : TIMESTAMPTZ
}
note right of api_keys
  key_hash: BCrypt(rawKey)
  rawKey chi hien 1 lan khi tao
  system_name: ten he thong tich hop
  VD: 'POS_QUAN1' | 'ECOMMERCE_WEB'
  --
  rate_limit_per_day = NULL: unlimited
  Toi da 10 key active / merchant
end note

' ========================================
' 14. API_REQUEST_LOGS
' ========================================

TABLE(api_request_logs) {
  PK(id) : BIGSERIAL
  --
  FK(api_key_id) : BIGINT
  COLUMN(endpoint) : VARCHAR(200) NOT NULL
  COLUMN(method) : VARCHAR(10) NOT NULL
  COLUMN(request_body) : JSONB
  COLUMN(response_status) : INT
  COLUMN(response_body) : JSONB
  COLUMN(response_time_ms) : BIGINT
  COLUMN(ip_address) : VARCHAR(45)
  COLUMN(created_at) : TIMESTAMPTZ
}
note right of api_request_logs
  Ghi lai moi API call tu POS
  api_key_id = NULL: key bi xoa
end note

' ========================================
' 15. MERCHANT_WEBHOOKS
' ========================================

TABLE(merchant_webhooks) {
  PK(id) : BIGSERIAL
  --
  FK(user_id) : BIGINT NOT NULL
  COLUMN(url) : VARCHAR(500) NOT NULL
  COLUMN(secret) : VARCHAR(255) NOT NULL
  COLUMN(events) : TEXT[]
  COLUMN(is_active) : BOOLEAN DEFAULT TRUE
  COLUMN(failure_count) : INT DEFAULT 0
  COLUMN(last_triggered_at) : TIMESTAMPTZ
  COLUMN(created_at) : TIMESTAMPTZ
}
note right of merchant_webhooks
  events: mang event duoc lang nghe
  VD: {"voucher.redeemed"}
  --
  Payload duoc ky HMAC-SHA256(secret)
  Tu dong disable khi failure_count >= 10
  Retry toi da 3 lan (exponential backoff)
end note

' ========================================
' 16. AUDIT_LOGS
' ========================================

TABLE(audit_logs) {
  PK(id) : BIGSERIAL
  --
  FK(user_id) : BIGINT
  COLUMN(action) : VARCHAR(50) NOT NULL
  COLUMN(entity_type) : VARCHAR(50) NOT NULL
  COLUMN(entity_id) : BIGINT NOT NULL
  COLUMN(old_value) : JSONB
  COLUMN(new_value) : JSONB
  COLUMN(created_at) : TIMESTAMPTZ
}
note right of audit_logs
  action: 'CREATE' | 'UPDATE' | 'DELETE'
  | 'APPROVE' | 'REJECT' | 'LOGIN'
  | 'REDEEM' | 'REVERSE' | 'STATUS_CHANGE'
  --
  entity_type: 'Voucher' | 'Campaign'
  | 'Customer' | 'User' | 'VoucherUsage'
  --
  old_value/new_value: snapshot truoc/sau thay doi
end note

' ========================================
' 17. MERCHANT_PROFILES
' ========================================

TABLE(merchant_profiles) {
  PK(id) : BIGSERIAL
  --
  FK(user_id) : BIGINT NOT NULL UNIQUE
  COLUMN(business_name) : VARCHAR(200)
  COLUMN(business_type) : VARCHAR(50)
  COLUMN(address) : TEXT
  COLUMN(logo_url) : VARCHAR(500)
  COLUMN(tax_code) : VARCHAR(20)
  COLUMN(max_api_keys) : INT DEFAULT 10
  COLUMN(created_at) : TIMESTAMPTZ
  COLUMN(updated_at) : TIMESTAMPTZ
}
note right of merchant_profiles
  1-1 voi users
  max_api_keys: gioi han so API Key
  active toi da (mac dinh 10)
end note

' ========================================
' RELATIONSHIPS
' ========================================

role_permissions }o--|| permissions : "permission_id"

email_verification_otps }o--|| users : "user_id"
password_reset_otps }o--|| users : "user_id"

merchant_profiles ||--|| users : "user_id"

campaigns }o--|| users : "created_by"

customers }o--o| users : "created_by"

vouchers }o--o| campaigns : "campaign_id"
vouchers }o--|| users : "created_by"

voucher_codes }o--|| vouchers : "voucher_id"
voucher_codes }o--o| customers : "customer_id"

voucher_customers }o--|| vouchers : "voucher_id"
voucher_customers }o--|| customers : "customer_id"

voucher_distributions }o--|| vouchers : "voucher_id"
voucher_distributions }o--|| customers : "customer_id"

voucher_usages }o--|| vouchers : "voucher_id"
voucher_usages }o--|| customers : "customer_id"

api_keys }o--|| users : "created_by"
api_request_logs }o--o| api_keys : "api_key_id"

merchant_webhooks }o--|| users : "user_id"

audit_logs }o--o| users : "user_id"

@enduml
